--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "Samsung >= 5"
   ],
   "dependencies": {
+    "axios": "^0.21.4",
     "dom7": "^3.0.0",
     "framework7": "^6.0.1",
     "framework7-icons": "^3.0.1",
@@ -28,6 +29,7 @@
     "path-browserify": "^1.0.1",
     "qrcode": "^1.4.4",
     "qrcodejs": "^1.0.0",
+    "qs": "^6.10.1",
     "skeleton-elements": "^3.3.0",
     "swiper": "^6.4.5"
   },
