--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CBH Lib Manager",
+  "name": "CBH Library Manager",
   "version": "1.0",
   "description": "Tiện ích nho nhỏ giúp câu lạc bộ CBH quản lý sách và việc mượn sách dễ dàng hơn ^^",
   "permissions": [
